--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					</div>
 				</div>
 			</div>
-			<P> By Prasanna</p>
+			<P class="tagline"> By Prasanna</p>
 		</div>
 		<script type="text/javascript" src="assets/jquery/jquery.min.js"></script>
 		<script type="text/javascript" src="src/app.js"></script>
